count both operator and detailed operator for decode metric (#2401)
count both operator and detailed operator for decode metric